--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pythonswaglab",
+  "name": "pythongoogletest",
   "version": "1.0.0",
   "description": "Test Project",
   "main": "index.js",
